--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 body {
-    background-image: url(../img/fractals-environment-1728589_1920.jpg);
-    background-position: center;
+    background-color: #2a2a2a;
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
 
 #container {
-    height: 620px;
+    height: 610px;
     width: 100%;
     position: relative;
+    background-image: url(../img/fractals-environment-1728589_1920.jpg);
+    background-position: center;
 }
 
 #avatar {
